add javadoc command to readme